--- a/imports/ui/pages/human/human.html
+++ b/imports/ui/pages/human/human.html
@@ -4,7 +4,7 @@
 
 <template name="humanBelow">
   <p class="w-100 text-center mt-4">
-    <a class="w-25 btn btn-dark btn-lg" href="/"><i class="fad fa-desktop"></i> Play with AI</a>
+    <a class="w-25 btn btn-dark btn-lg go-to-href" data-href="/"><i class="fad fa-desktop"></i> Play with AI</a>
     <a id="reset" class="w-25 btn btn-light btn-lg text-dark"><i class="fad fa-redo-alt"></i> Restart</a>
   </p>
   <script>
@@ -170,6 +170,12 @@
     game.load('rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1');
     updateStatus();
     $('#game-over').removeClass('d-inline-block').addClass('d-none');
+  });
+  $('.go-to-href').each(function(){
+    $(this).on('click', function(e){
+      e.preventDefault();
+      window.location.href = $(this).attr('data-href');
+    });
   });
   </script>
 </template>
